# Tools_Supporting_DataAnalysis

./: README.md
Homw_Works/: HomeWork2.py  homework1.py
Homw_Works/Testing/Testing-main/: .gitignore  testhw.py
Homw_Works/analyysis_task2/: MEADME.md  result.csv  run_analysis.py
Homw_Works/analyysis_task2/iris_analysis/: calculate.py
Homw_Works/analyysis_task2/iris_analysis/io/: load.py  save.py
Homw_Works/shell_script_homework/: echo.py  script.sh
Labs/: Data_structure.py  exercise3_4.py  lab2.py  warmup1.py
Labs/Chapter7/: asperses.py  lab2.py  lab2_result.py
Labs/Exercise_With_Loops&List/: exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py
Labs/Exercise_Without_Loops&List/: exercise1.py  exercise2.py  exercisr3.py
Labs/Numpy/: classes.ipynb
Labs/Numpy/Numpy-main/: classes.ipynb
Labs/Pandas/: Classes.ipynb  iris.xlsx  iris2.xlsx  try.py
Labs/Pandas/data/: tablica_a._tablica_trwania_zycia_2019.xlsx
Labs/Program_Test/: .gitignore  summ.py
Labs/Program_Test/code/: test_parametrize_exercise.py
Labs/Python Testing/code/: test_parametrize_exercise.py
Labs/continous-integration/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  Readme.rst  pyproject.toml  setup.cfg  tox.ini
Labs/continous-integration/.github/workflows/: tests.yml
Labs/continous-integration/src/sample_package/: __init__.py  data.json
Labs/continous-integration/src/tests/: test_simple.py
Labs/exercise5_AnalysisTools/exercise5_AnalysisTools-main/: README.txt
Labs/numba-cython/: Readme.rst  classes.ipynb
