[metadata]
name = sample_package
description = Sample package for classes.
long_description = file: Readme.rst
long_description_content_type = text/x-rst
author = Grzegorz Bokota
author_email = g.bokota@mimuw.edu.pl
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8
include_package_data = true
package_dir =
    =src
use_scm_version = true

[options.packages.find]
where = src
